--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ravi-sacred-healing",
-  "version": "1.0.0",
-  "description": "Secure scheduling website for Ravi ~ Intuitive Healer & Sensual Bodyworker",
+  "name": "client-booking-system",
+  "version": "1.1.0",
+  "description": "Secure client booking and management system with encrypted storage, JWT auth, and multi-provider communications",
   "type": "module",
   "scripts": {
     "dev": "node server.js",
