security: remove hardcoded secrets (GitGuardian fix) + pre-deploy v1.1.1
- Replace hardcoded JWT secret 'ravi-secret-2024' with JWT_SECRET constant

- Update .env.example with placeholder instead of real password

- Update metrics: 57 commits, 29,099 LOC, 16 hours

- Bump version to 1.1.1

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@
 # ADMIN AUTHENTICATION
 # ===========================================
 ADMIN_USERNAME=ravi
-ADMIN_PASSWORD=admin2024
-# ⚠️ CHANGE THIS IMMEDIATELY AFTER FIRST LOGIN!
+ADMIN_PASSWORD=REPLACE_WITH_STRONG_PASSWORD
+# ⚠️ MUST be 12+ characters! Example: xK9#mP2$vL7@nQ4
 
 # ===========================================
 # ENCRYPTION (CRITICAL!)
