--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
+    "twilio": "^5.4.0",
     "uuid": "^9.0.1"
   },
   "engines": {
